# ParTIpy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
ParTIpy/: __init__.py  arch.py  const.py  enrichment.py  generate_test_data.py  init.py  initialize.py  optim.py  paretoti_funcs.py  weights.py
benchmarking/: aa_toy_data.py  normalization.ipynb  performance.ipynb  playground.ipynb  runtimes.ipynb  simulation_utils.ipynb
docs/source/: conf.py  index.rst  installation.rst  release_notes.rst  requirements.txt
docs/source/notebooks/: crosstalk.ipynb  quickstart.ipynb
partipy/: __init__.py  arch.py  enrichment.py  generate_test_data.py  initialize.py  optim.py  paretoti.py  paretoti_funcs.py  plotting.py  simulate.py  weights.py
tests/: conftest.py
tests/unit/: test_enrichment.py  test_initialization.py  test_optimization.py
vignette/: hepatocytes.ipynb
